# serializer version: 1
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(equals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', ''), '0'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_1_neq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(notEquals(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', ''), '0'), 1))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_2_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(less(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', ''), '5'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_3_gt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(greater(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', ''), '5'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_4_icontains
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(ilike(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', '')), '%0%'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_5_is_set
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', '')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_6_is_not_set
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), isNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', '')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_json_only__no_skip_indexes_used_7_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), in(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, 'test_prop'), ''), 'null'), '^"|"$', ''), tuple('0', '1')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_lt_typed_datetime_property
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(less(parseDateTime64BestEffortOrNull(events.mat_lt_datetime_prop, 6, 'UTC'), toDateTime64('2024-01-15 10:30:00.000000', 6, 'UTC')), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_lt_typed_numeric_property
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(less(accurateCastOrNull(events.mat_test_prop, 'Float64'), 5), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_bloom_filter_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.mat_test_prop, '5'))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_bloom_filter_1_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), has(['2', '5'], events.mat_test_prop))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_bloom_filter_2_in_with_sentinel
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), in(nullIf(nullIf(events.mat_test_prop, ''), 'null'), tuple('5', '')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_bloom_filter_3_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '5'), notEquals(events.mat_test_prop, ''), notEquals(events.mat_test_prop, 'null')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_minmax_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.mat_test_prop, '5'))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_minmax_1_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '5'), notEquals(events.mat_test_prop, ''), notEquals(events.mat_test_prop, 'null')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_minmax_2_gt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(greater(events.mat_test_prop, '5'), notEquals(events.mat_test_prop, ''), notEquals(events.mat_test_prop, 'null')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_minmax_3_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), has(['2', '5'], events.mat_test_prop))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_minmax_4_icontains_no_isnotnull
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ilike(events.mat_test_prop, '%5%'))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_minmax_5_regex
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(match(toString(nullIf(nullIf(events.mat_test_prop, ''), 'null')), '[0-9]'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_ngrambf_lower_0_icontains_long
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), like(lower(events.mat_test_prop), lower('%value_that_is_long_enough%')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_non_nullable_ngrambf_lower_1_icontains_null_sentinel
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(ilike(toString(nullIf(nullIf(events.mat_test_prop, ''), 'null')), '%null%'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(equals(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_1_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(has(['2', '5'], events.mat_test_prop), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_2_neq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(notEquals(events.mat_test_prop, '5'), 1))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_3_not_in
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(notIn(events.mat_test_prop, tuple('2', '5')), 1))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_4_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_5_gt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(greater(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_6_icontains
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(ilike(events.mat_test_prop, '%5%'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_bloom_filter_7_is_set
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), isNotNull(events.mat_test_prop))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(equals(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_1_neq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(notEquals(events.mat_test_prop, '5'), 1))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_2_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_3_gt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(greater(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_4_lte
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(lessOrEquals(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_5_gte
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(greaterOrEquals(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_6_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(has(['2', '5'], events.mat_test_prop), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_7_icontains_with_isnotnull
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(ilike(events.mat_test_prop, '%5%'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_8_regex
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(match(toString(events.mat_test_prop), '[0-9]'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_non_string_constant_against_string_column_errors_0_int
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, 5), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_non_string_constant_against_string_column_errors_1_float
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, 5.5), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_non_string_constant_against_string_column_errors_2_datetime
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, toDateTime64('2024-01-15 10:30:00.000000', 6, 'UTC')), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_numeric_looking_strings_compare_lexically
  '''
  SELECT events.distinct_id AS distinct_id
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '500'), isNotNull(events.mat_test_prop)))
  ORDER BY events.distinct_id ASC
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295,
                     optimize_rewrite_aggregate_function_with_if=0,
                     optimize_min_inequality_conjunction_chain_length=4294967295,
                     allow_experimental_join_condition=1,
                     use_hive_partitioning=0
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_string_constant_flavors_0_string_pure_alpha
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, 'apple'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_string_constant_flavors_1_string_numeric_looking
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_string_constant_flavors_2_string_date_looking
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '2024-01-15'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_minmax_lt_string_constant_flavors_3_string_iso_datetime_looking
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '2024-01-15T10:30:00Z'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_0_icontains_long
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(like(lower(coalesce(events.mat_test_prop, '')), lower('%value_that_is_long_enough%')), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_1_not_icontains
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(notILike(events.mat_test_prop, '%abc%'), 1))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_2_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(equals(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_3_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_test_prop, '5'), isNotNull(events.mat_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_4_regex
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(match(toString(events.mat_test_prop), 'value_that_is_long_enough'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_property_group_optimized_0_eq_string
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.properties_group_custom['test_prop'], '5'))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_property_group_optimized_1_is_set
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), has(events.properties_group_custom, 'test_prop'))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_property_group_optimized_2_is_not_set
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), not(has(events.properties_group_custom, 'test_prop')))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_property_group_optimized_3_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(has(events.properties_group_custom, 'test_prop'), in(events.properties_group_custom['test_prop'], tuple('2', '5'))))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_property_group_optimized_4_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(less(if(has(events.properties_group_custom, 'test_prop'), events.properties_group_custom['test_prop'], NULL), '5'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_property_group_optimized_5_icontains
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(ilike(toString(if(has(events.properties_group_custom, 'test_prop'), events.properties_group_custom['test_prop'], NULL)), '%5%'), 0))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_typed_datetime_mat_col_uses_minmax_index
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(ifNull(less(events.mat_typed_datetime_prop, toDateTime64('2024-01-05 00:00:00', 6, 'UTC')), 0), isNotNull(events.mat_typed_datetime_prop)))
  LIMIT 50000
  '''
# ---
# name: TestEventPropertySkipIndexes.test_typed_numeric_mat_col_uses_minmax_index
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_typed_numeric_prop, 5), isNotNull(events.mat_typed_numeric_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_bloom_filter_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(equals(events.mat_pp_test_prop, '5'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_bloom_filter_1_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(has(['2', '5'], events.mat_pp_test_prop), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_bloom_filter_2_not_in
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(notIn(events.mat_pp_test_prop, tuple('2', '5')), 1))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_bloom_filter_3_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_pp_test_prop, '5'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_minmax_0_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(equals(events.mat_pp_test_prop, '5'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_minmax_1_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(less(events.mat_pp_test_prop, '5'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_minmax_2_gt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(greater(events.mat_pp_test_prop, '5'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_minmax_3_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(has(['2', '5'], events.mat_pp_test_prop), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_minmax_4_icontains_with_isnotnull
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(ilike(events.mat_pp_test_prop, '%5%'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_0_icontains_long
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(like(lower(coalesce(events.mat_pp_test_prop, '')), lower('%value_that_is_long_enough%')), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_1_eq
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(equals(events.mat_pp_test_prop, '5'), isNotNull(events.mat_pp_test_prop)))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_property_group_optimized_0_eq_string
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.person_properties_map_custom['test_prop'], '5'))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_property_group_optimized_1_is_set
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), has(events.person_properties_map_custom, 'test_prop'))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_property_group_optimized_2_in_multi
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), and(has(events.person_properties_map_custom, 'test_prop'), in(events.person_properties_map_custom['test_prop'], tuple('2', '5'))))
  LIMIT 50000
  '''
# ---
# name: TestPersonOnEventsPropertySkipIndexes.test_property_group_optimized_3_lt
  '''
  SELECT count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), ifNull(less(if(has(events.person_properties_map_custom, 'test_prop'), events.person_properties_map_custom['test_prop'], NULL), '5'), 0))
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_bloom_filter_0_eq
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(equals(where_optimization.pmat_test_prop, '5'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(equals(persons.properties___test_prop, '5'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_bloom_filter_1_in_multi
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(has(['2', '5'], where_optimization.pmat_test_prop), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE in(persons.properties___test_prop,
           tuple('2', '5'))
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_bloom_filter_2_lt
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(less(where_optimization.pmat_test_prop, '5'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(less(persons.properties___test_prop, '5'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_minmax_0_eq
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(equals(where_optimization.pmat_test_prop, '5'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(equals(persons.properties___test_prop, '5'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_minmax_1_lt
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(less(where_optimization.pmat_test_prop, '5'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(less(persons.properties___test_prop, '5'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_minmax_2_gt
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(greater(where_optimization.pmat_test_prop, '5'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(greater(persons.properties___test_prop, '5'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_minmax_3_icontains_with_isnotnull
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(ilike(where_optimization.pmat_test_prop, '%5%'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(ilike(toString(persons.properties___test_prop), '%5%'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_0_icontains_long
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(like(lower(coalesce(where_optimization.pmat_test_prop, '')), lower('%value_that_is_long_enough%')), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(ilike(toString(persons.properties___test_prop), '%value_that_is_long_enough%'), 0)
  LIMIT 50000
  '''
# ---
# name: TestPersonPropertySkipIndexes.test_mat_col_nullable_ngrambf_lower_1_eq
  '''
  SELECT count() AS `count()`
  FROM
    (SELECT tupleElement(argMax(tuple(person.pmat_test_prop), person.version), 1) AS properties___test_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), and(equals(where_optimization.pmat_test_prop, '5'), isNotNull(where_optimization.pmat_test_prop))))))
     GROUP BY person.id
     HAVING and(equals(argMax(person.is_deleted, person.version), 0), less(argMax(toTimeZone(person.created_at, 'UTC'), person.version), plus(now64(6, 'UTC'), toIntervalDay(1))))) AS persons
  WHERE ifNull(equals(persons.properties___test_prop, '5'), 0)
  LIMIT 50000
  '''
# ---
